# llvm-pass-skeleton

./: .gitignore  README.md
DynamicLib/: CMakeLists.txt
DynamicLib/getFunc/: CMakeLists.txt  GetFunc.cpp
DynamicLib/include/: log.h
DynamicLib/test/: for_while.c  run.sh
Excutable/: CMakeLists.txt  main.cpp
Excutable/include/: Passes.h  Utils.h  log.h
Excutable/src/: CMakeLists.txt  GetFunc.cpp
Excutable/src/utils/: CMakeLists.txt  Utils.cpp
Excutable/test/: for_while.c  run.sh
